--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
-  "name": "escalas",
+  "name": "comparador-escalas",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "express": "^5.1.0",
-    "express-fileupload": "^1.5.1",
+    "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "pdf-parse": "^1.1.1"
   }
 }
